"forum" app renamed to "forums" Group model renamed to Forum model.

--- a/index.yaml
+++ b/index.yaml
@@ -2,7 +2,7 @@ indexes:
   - kind: Comment
     properties:
     - name: class
-    - name: group
+    - name: forum
     - name: created
       direction: desc
 
