user profile/account pages, community page, lots of tweaks

--- a/index.yaml
+++ b/index.yaml
@@ -32,3 +32,9 @@ indexes:
   - name: site
   - name: score
     direction: desc
+
+- kind: User
+  properties:
+  - name: site
+  - name: karma
+    direction: desc
