--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,10 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /admin/.*
+  script: $PYTHON_LIB/google/appengine/ext/admin
+  login: admin
+
 - url: /.*
   script: main.py
 
