voting redirect for non logged in users, working on blobstore img upload, moved users to own directory, paging for topics, change hotness algo to reddit, styling..

--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,10 @@ handlers:
   script: $PYTHON_LIB/google/appengine/ext/admin
   login: admin
 
+- url: /upload
+  script: main.py
+  login: admin
+
 - url: /.*
   script: main.py
 
