--- a/index.yaml
+++ b/index.yaml
@@ -22,6 +22,12 @@ indexes:
   - name: score
     direction: desc
 
+- kind: Message
+  properties:
+  - name: to
+  - name: created
+    direction: desc
+
 - kind: Topic
   properties:
   - name: site
