fix sign up next arg, tweaks

--- a/index.yaml
+++ b/index.yaml
@@ -28,3 +28,8 @@ indexes:
   - name: score
     direction: desc
 
+- kind: User
+  properties:
+  - name: site
+  - name: karma
+    direction: desc
