--- a/index.yaml
+++ b/index.yaml
@@ -34,6 +34,12 @@ indexes:
   - name: score
     direction: desc
 
+- kind: TopicEdit
+  properties:
+  - name: topic
+  - name: created
+    direction: desc
+
 - kind: User
   properties:
   - name: site
