--- a/index.yaml
+++ b/index.yaml
@@ -34,6 +34,12 @@ indexes:
   - name: score
     direction: desc
 
+- kind: Topic
+  properties:
+  - name: site
+  - name: updated
+    direction: desc
+
 - kind: TopicEdit
   properties:
   - name: topic
