--- a/index.yaml
+++ b/index.yaml
@@ -40,6 +40,12 @@ indexes:
   - name: updated
     direction: desc
 
+- kind: Topic
+  properties:
+  - name: up_votes
+  - name: created
+    direction: desc
+
 - kind: TopicEdit
   properties:
   - name: topic
